# agentkit

./: .gitignore  LICENSE  NEXT_TASKS.md  README.md  pyproject.toml  run_tests.sh  send_message_mcp_port.md
.github/workflows/: release.yaml
agentkit/: README.md  constants.py  databus.py  handlers.py  messages.py  network.py  processor.py
agentkit/agents/: agent_manager.py  base_agent.py  human_agent.py  simple_agent.py  simple_agent_factory.py  task_aware_agent.py
agentkit/brains/: __init__.py  base_brain.py  human_brain.py  simple_brain.py  simple_brain_instruct.py  tool_brain.py
agentkit/common/: interfaces.py
agentkit/examples/: .env.example  agent_runner_example.py  agent_task_stack_example.py  config_agent.py  human_agent.py  message_tool_example.py  simple_chat_agent.py  sophia_task_agent.py  worker_echo_agent.py
agentkit/examples/.ipynb_checkpoints/: nekomata-try-checkpoint.ipynb
agentkit/examples/agent_homes/: .gitignore
agentkit/functions/: built_in_tools.py  delegation_tools.py  execution_tools.py  filesystem_tools.py  functions_registry.py  reminder_tools.py
agentkit/io/: console.py
agentkit/mcp/: __init__.py  config.py  manager.py
agentkit/memory/: base_memory.py  memory_protocol.py  simple_memory.py  threaded_memory.py
agentkit/planning/: __init__.py  planner.py  state.py
agentkit/utils/: __init__.py  agent_home.py  agent_runner.py
tests/: README.md  __init__.py  conftest.py
tests/agents/: __init__.py  test_base_agent.py  test_human_agent.py  test_simple_agent.py  test_task_aware_agent.py
tests/brains/: __init__.py  test_base_brain.py  test_simple_brain.py
tests/functions/: __init__.py  test_built_in_tools.py  test_execution_tools.py  test_filesystem_tools.py  test_reminder_tools.py
tests/mcp/: test_manager.py
tests/memory/: __init__.py  test_base_memory.py  test_conversation_context.py  test_conversation_manager.py  test_conversation_task.py  test_simple_memory.py  test_threaded_memory.py
tests/planning/: test_planner.py
(+15 files in other folders)
