[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentkit"
version = "0.0.2"
dependencies = [
  "networkkit",
  "litellm"
]
requires-python = ">=3.8"
authors = [
  {name = "Vikram Kumar", email = "vik@japanvik.net"},
]
description = "A simple framework for creating distributed llm agent swarms"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["artificial intelligencs", "pubsub", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
[project.urls]
Repository = "https://github.com/japanvik/agentkit"
